--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/qianlipp/files-walker/issues"
   },
-  "homepage": "https://github.com/qianlipp/files-walker#readme"
+  "homepage": "https://github.com/qianlipp/files-walker#readme",
+  "dependencies": {
+    "fs": "^0.0.1-security"
+  }
 }
